Fixed card link overstretch

--- a/client/sass/card.sass
+++ b/client/sass/card.sass
@@ -100,7 +100,8 @@ section.grid.card
   a
     position: absolute
     right: -1in
-    -webkit-transform: rotate(-90deg) translateX(-63%)
+    -webkit-transform: rotate(-90deg) translateX(-50%)
+    width: 3.5in
 
 section.giver.card
   img
